<resources>
    <string name="app_name">WeatherApp</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="wind_status">Wind status</string>
    <string name="visibility">Visibility</string>
    <string name="humidity">Humidity</string>
    <string name="air_pressure">Air pressure</string>
    <string name="refresh_button">refresh button</string>
    <string name="weather_icon">weather icon</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
</resources>