<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient_bg"
    >

    <ImageButton
        android:id="@+id/btn_refresh"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/date"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_refresh_30dp"
        android:contentDescription="@string/refresh_button"
        android:background="?android:selectableItemBackgroundBorderless"
        android:scaleType="fitXY"
        />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        tools:text="Today, April 19th, 2022"
        android:textColor="@color/white"
        android:layout_marginTop="78dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/city_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"
        tools:text="Campo Grande"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/montserrat_bold"
        />

    <TextView
        android:id="@+id/country_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_location"
        tools:text="Brasil"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:fontFamily="@font/montserrat_regular"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_weather"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:cardElevation="120dp"
        app:cardCornerRadius="120dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/country_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            >

            <ImageView
                android:id="@+id/iv_weather"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                tools:src="@drawable/moon"
                android:scaleType="fitXY"
                android:contentDescription="@string/weather_icon"
                android:layout_marginTop="3dp"
                />

            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10ºC"
                android:textSize="80sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_light"
                android:layout_marginTop="2dp"
                />

            <TextView
                android:id="@+id/tv_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Rain"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginTop="5dp"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_max_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cv_weather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_wind"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:fontFamily="@font/montserrat_bold"
            />

        <TextView
            android:id="@+id/tv_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="25ºC"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat_regular"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/min"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:fontFamily="@font/montserrat_bold"
            />

        <TextView
            android:id="@+id/tv_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="12ºC"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat_regular"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_wind"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_max_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ll_visibility"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_status"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            />

        <TextView
            android:id="@+id/tv_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="7mph"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/montserrat_regular"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_visibility"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_max_min"
        app:layout_constraintStart_toEndOf="@id/ll_wind"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visibility"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            />

        <TextView
            android:id="@+id/tvVisibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="6.4 miles"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/montserrat_regular"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_humidity"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_wind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ll_pressure"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="22dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            />

        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="85%"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/montserrat_regular"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pressure"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_visibility"
        app:layout_constraintStart_toEndOf="@id/ll_humidity"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="22dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_pressure"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            />

        <TextView
            android:id="@+id/tvAirPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="998 mb"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/montserrat_regular"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>